--- a/git.html
+++ b/git.html
@@ -61,7 +61,8 @@
   <tr> <th> Objectif</th> <th> Instruction</th> </tr>
   <tr> <td> se déplacer dans le dossier <em>Documents</em> </td> <td> <pre>cd Documents</pre> </td> </tr>
   <tr> <td> revenir au dossier parent </td> <td> <pre>cd ..</pre></td> </tr>
-  <tr> <td> revenir à la racine </td> <td> <pre>cd r</pre></td> </tr>
+  <tr> <td> revenir à la racine </td> <td> <pre>cd</pre></td> </tr>
+  <tr> <td> trouver <em>monFichier</em></td> <td><pre>whereis monFichier</pre></td></tr>
   <tr> <td> afficher la liste des éléments du dossier local </td> <td> <pre>ls</pre></td> </tr>
   <tr> <td> afficher la liste des éléments actifs du dossier local </td> <td> <pre>ps</pre></td> </tr>
   <tr> <td> créer le fichier <em>monFichier</em> </td> <td> <pre>touch monFichier</pre></td> </tr>
@@ -75,6 +76,8 @@
   <tr> <td> nettoyer le disque</td> <td><pre>sudo apt-get autoclean
 sudo apt-get clean
 sudo apt-get auroremove</pre></td></tr>
+  <tr> <td> lancer l'interpréteur Python </td> <td><pre>python3</pre></td></tr>
+  <tr> <td> supprimer <em>monApplication</em></td> <td><pre>sudo apt-get remove monApplication</pre></td></tr>
 </table>
 
 <p>Attention, pour ouvrir un fichier du répertoire courant, l'appel direct de monFichier est insuffisant. Il faut d'abord rajouter le chemin local, qui force la connexion.</p>
