--- a/java.html
+++ b/java.html
@@ -1262,9 +1262,9 @@ public class Letter implements Serializable {
 
     <h3 id="servicesweb">Les services Web</h3>
 
-    <div class="pcle"><em>sérialisation :</em> codage d'une information sous la fome d'une suite de données atomiques.</br>
-    <em>parser un fichier :</em> consiste à analyser un fichier afin d'en retirer les informations utiles.</br>
-    <em>serveur d'applications :</em> </div>
+    <div class="pcle"><strong>sérialisation :</strong> codage d'une information sous la fome d'une suite de données atomiques.</br>
+    <strong>parser un fichier :</strong> consiste à analyser un fichier afin d'en retirer les informations utiles.</br>
+    <strong>serveur d'applications :</strong> logiciel d'infrastructure offrant un contexte d'exécution pour des applications Web et non pas de simples procédures ou scripts</div>
 
     <p>Les services Web sont un ensemble de technologies permettant l'invocation de méthodes distantes. La communication et l'échange de données sont basés sur les standards Web HTTP et XML. Il existe 2 familles de services Web : SOAP et REST.</p>
 
