--- a/java.html
+++ b/java.html
@@ -1268,6 +1268,13 @@ public class Letter implements Serializable {
 
     <p>Les services Web sont un ensemble de technologies permettant l'invocation de méthodes distantes. La communication et l'échange de données sont basés sur les standards Web HTTP et XML. Il existe 2 familles de services Web : SOAP et REST.</p>
 
+    <p>Les principaux avantages des services Web sont les suivants :</p>
+    <ul>
+        <li>portabilité entre différents langages, différents systèmes d'exploitation</li>
+        <li>utilisation de standards et protocoles ouverts</li>
+        <li>utilisation des formats XNL dans les échanges de données</li>
+        <li>flexibilité, extensibilité</li>
+    </ul>
     <h4>SOAP Simple Object Access Protocol</h4>
 
     <p>SOAP est un protocole de RPC Remote Procedure Call orienté objet et basé sur l'échange de données structurées en XML. Le transfert se fait par le protocole HTTP ou SMTP. Un message SOAP est un document XML composé d'une <em>envelope</em> avec un <em>header</em> et le <em>body</em>, corps du message. Dans le cas de l'envoi d'une image, on peut utiliser un message SOAP avec attachement en utilisant un message MIME Multimedia Internet Mail Extension. SOAP permet l'appel de méthodes distantes dans un environnement distribué.</p>
